--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "axios": "^1.5.0",
     "sqlite3": "^5.1.6",
     "nodemailer": "^6.9.4"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
